@@ -5,6 +5,11 @@ May. 5. 2022 (B. InSung)
 
 May. 12. 2022 (B. InSung)
 - 내가 뭘 했는지는 몰라도 일단 뭐 되긴 된거 같다. 연산 중에 오류로 torch.mv 함수 내에서 벡터와 텐서 연산 오류 외에는 아직 큰 문제는 없음.
+- torch.mv 함수 내에서 matmul 과정 중에서 오류 발생. 아마도 13000000 텐서와 10 벡터를 연산을 하는데 텐서를 10 * 1300000으로 맞춰 줘야하는거 같다.
+    - .view(10, 1300000) 함수로 변환시 오류 없음. torch.mv 에서 적용 후 검토 예정
+    RuntimeError: size mismatch, got 10, 10x1300000,10 
+- 사이즈를 반대로 적용. 1300000 * 10 으로 적용하여 값 확인
+    - 오류 해결됨. 커밋.
 
 May. 11. 2022 (B. InSung)
 - 모델을 재구성하는중.
